# effectiveModernCpp

./: CMakeLists.txt  README.md  item10_perfer_using_scoped_enums.cpp  item11_perfer_deleted_functions_to_private.cpp  item12_declare_override.cpp  item13_const_iterator.cpp  item14_declare_nonexception.cpp  item15_use_constexpr.cpp  item16_const_member_funtions_thread_safe.cpp  item17_special_member_function_generation.cpp  item18_unique_ptr.cpp  item19_shared_ptr.cpp  item1_deducing_type.cpp  item20_weak_ptr.cpp  item21_use_make_xxx.cpp  item22_gadget.h  item22_pimpl.cpp  item22_widget.cpp  item22_widget.h  item23_move_forward.cpp  item24_universal_rvalue.cpp  item25_move_forward.cpp  item26_avoid_overload_uf.cpp  item27_familiarize_alternatives_to_overload_uf.cpp  item28_reference_collapsing.cpp  item29_move_not_cheap.cpp  item2_auto_test.cpp  item30_familiarize_pf_failure.cpp  item31_avoid_default_capture.cpp  item32_use_init_capture.cpp  item34_prefer_lambda_to_bind.cpp  item35_prefer_tasks.cpp  item36_specify_std_launch_async.cpp  item37_make_threads_unjoinable_on_all_paths.cpp  item38_care_for_destructor.cpp  item39_void_future_one_shot_communication.cpp  item3_decltype.cpp  item40_atomatic_volatile.cpp  item4_view_deduce.cpp  item5_auto.cpp  (+6 more)
